--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
+    <section id="home" class="main">
+        <div class="canvas">
 
+        </div>
+        <div class="container">
+            <div class="intro">Hello, name, info</div>
+            <button type="button">See my work</button>
+        </div>
+    </section>
 </body>
 </html>
