icon fonts fixed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <!--<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>-->
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
     </script>
-    <script defer src="/fonts/fontawesome-free-5.0.10/svg-with-js/js/fontawesome-all.js"></script>
+    <script defer src="fonts/fontawesome/fontawesome-all.min.js"></script>
 </head>
 <body>
 
@@ -23,7 +24,7 @@
         </div>
 
         <div class="button page-link">See my work
-            <i class="fas fas-arrow-right"></i>
+            <i class="fa fa-arrow-right"></i>
         </div>
     </div>
 
@@ -34,7 +35,6 @@
             <li>portfolio</li>
             <li>contact</li>
         </ul>
-        <i class="fas fas-bars"></i>
+        <i class="fa fa-bars"></i>
     </nav>
 </section>
-
