hover styling and animations on home section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script defer src="js/index.js"></script>
 </head>
 <body>
-
 <!-- HOME -->
 <section id="home">
     <div class="canvas"></div>
@@ -23,12 +22,11 @@
             <br>
             Full-stack web developer in training
         </div>
-
-        <button class="drop-button page-link" type="button">See my work
-            <i class="fa fa-arrow-right"></i>
-        </button>
+        <div class="drop-button page-link">See my work
+            <i class="arrow fa fa-arrow-right"></i>
+        </div>
     </div>
-
+<!--NAVBAR-->
     <nav class="container">
         <ul class="navigation">
             <li>home</li>
@@ -41,3 +39,6 @@
         </div>
     </nav>
 </section>
+<!--ABOUT-->
+</body>
+</html>
