navbar classes added to each list item

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 <!--NAVBAR-->
     <nav class="container">
         <ul class="navigation">
-            <li>home</li>
-            <li>about</li>
-            <li>portfolio</li>
-            <li>contact</li>
+            <li class="nav-home">home</li>
+            <li class="nav-about">about</li>
+            <li class="nav-portfolio">portfolio</li>
+            <li class="nav-contact">contact</li>
         </ul>
         <div class="menu-dropdown lg-hidden sm-visible">
             <i class="fa fa-bars"></i>
