WIP about structure and styling

--- a/index.html
+++ b/index.html
@@ -40,5 +40,27 @@
     </nav>
 </section>
 <!--ABOUT-->
+<section id="about">
+    <div class="header container">
+        <h2>ABOUT</h2>
+    </div>
+    <div class="key-skills container">
+        <div class="lg-col-2 sm-col-1"></div>
+        <div class="lg-col-2 sm-col-1"></div>
+    </div>
+    <div class="main-skills">
+        <div class="info lg-col-2 sm-col-1">
+            <div class="picture">
+                <img src="images/temp_picture.jpg" alt="Me">
+            </div>
+            <div>
+                <p>SOMETHING ABOUT ME</p>
+            </div>
+        </div>
+        <div class="skills lg-col-2 sm-col-1">
+            
+        </div>
+    </div>
+</section>
 </body>
 </html>
