key skill description changed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <i class="fa fa-desktop"></i>
                 </div>
                 <div class="text">
-                    <p>user experience</p>
+                    <p>web design / development</p>
                 </div>
             </div>
             <div class="key-skill skill-four lg-col-4 sm-col-2">
