technologies logos added to html and styled

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="handlebars-v4.0.11.js"></script>
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
     </script>
@@ -75,7 +76,7 @@
                     <i class="fa fa-users"></i>
                 </div>
                 <div class="text">
-                    <p>team facilitation</p>
+                    <p>scrum</p>
                 </div>
             </div>
         </div>
@@ -90,7 +91,45 @@
             </div>
         </div>
         <div class="skills lg-col-2 sm-col-1">
-            
+            <div class="technology">
+                <img src="images/skills/csm.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/css3.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/git.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/github.svg">
+            </div>
+            <div class="technology">
+                <img src="images/skills/gulp.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/html5.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/javascript.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/mysql.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/nodejs.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/npm.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/php.png">
+            </div>
+            <div class="technology">
+                <img src="images/skills/sass.svg">
+            </div>
+            <div class="technology">
+                <img src="images/skills/tableau.png">
+            </div>
         </div>
     </div>
 </section>
