skills panel built and styled

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <i class="fa fa-users"></i>
                 </div>
                 <div class="text">
-                    <p>scrum</p>
+                    <p>scrum / agile</p>
                 </div>
             </div>
         </div>
@@ -91,44 +91,40 @@
             </div>
         </div>
         <div class="skills lg-col-2 sm-col-1">
-            <div class="technology">
-                <img src="images/skills/csm.png">
+            <div class="bar">
+                <div class="fill" style="width: 60%">
+                    <div class="tag">HTML / CSS</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/css3.png">
+            <div class="bar">
+                <div class="fill" style="width: 40%">
+                    <div class="tag">JavaScript</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/git.png">
+            <div class="bar">
+                <div class="fill" style="width: 55%">
+                    <div class="tag">PHP</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/github.svg">
+            <div class="bar">
+                <div class="fill" style="width: 60%">
+                    <div class="tag">MySQL</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/gulp.png">
+            <div class="bar">
+                <div class="fill" style="width: 30%">
+                    <div class="tag">MongoDB</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/html5.png">
+            <div class="bar">
+                <div class="fill" style="width: 60%">
+                    <div class="tag">Tableau</div>
+                </div>
             </div>
-            <div class="technology">
-                <img src="images/skills/javascript.png">
-            </div>
-            <div class="technology">
-                <img src="images/skills/mysql.png">
-            </div>
-            <div class="technology">
-                <img src="images/skills/nodejs.png">
-            </div>
-            <div class="technology">
-                <img src="images/skills/npm.png">
-            </div>
-            <div class="technology">
-                <img src="images/skills/php.png">
-            </div>
-            <div class="technology">
-                <img src="images/skills/sass.svg">
-            </div>
-            <div class="technology">
-                <img src="images/skills/tableau.png">
+            <div class="bar">
+                <div class="fill" style="width: 60%">
+                    <div class="tag">Scrum / Agile</div>
+                </div>
             </div>
         </div>
     </div>
