portfolio header and first project panels laid out WIP

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 </section>
 <!--ABOUT-->
-<section id="about">
+<section id="about" class="section-margins">
     <div class="header container">
         <h2>ABOUT</h2>
     </div>
@@ -113,7 +113,7 @@
             </div>
             <div class="bar">
                 <div class="fill" style="width: 30%">
-                    <div class="tag">MongoDB</div>
+                    <div class="tag">DBs</div>
                 </div>
             </div>
             <div class="bar">
@@ -125,6 +125,56 @@
                 <div class="fill" style="width: 60%">
                     <div class="tag">Scrum / Agile</div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--PORTFOLIO-->
+<section id="portfolio" class="section-margins">
+    <div class="header container">
+        <h2>PROJECTS</h2>
+    </div>
+    <div class="projects container">
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
+            </div>
+        </div>
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
+            </div>
+        </div>
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
+            </div>
+        </div>
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
+            </div>
+        </div>
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
+            </div>
+        </div>
+        <div class="card lg-col-3">
+            <div class="project-hover">
+                <div>Project Name</div>
+                <div>Technologies used</div>
+                <div class="button">See Project</div>
             </div>
         </div>
     </div>
