project links to sites / github added, aptitude test added to gallery

--- a/index.html
+++ b/index.html
@@ -136,61 +136,39 @@
         <h2>PROJECTS</h2>
     </div>
     <div class="projects container">
-
         <div class="lg-col-3">
-            <div class="card project-one"></div>
-            <!--<div class="project-hover-active">-->
+            <a href="https://dev.maydenacademy.co.uk/students/2018/caitlin/solar_system/" target="_blank">
+                <div class="card project-one"></div>
+            </a>
+            <!--<div class="project-summary">-->
                 <!--<div class="bold">Solar System</div>-->
-                <!--<span class="highlight-raspberry">HTML / CSS</span>-->
+                <!--<div class="highlight-raspberry">HTML / CSS</div>-->
             <!--</div>-->
-            <!--<div class="button" id="mayrio-kart">See Project</div>-->
+            <!--<div class="project-button" id="solar-system">See Project</div>-->
         </div>
-
         <div class="lg-col-3">
-            <div class="card project-two"></div>
-                <!--<div class="text">-->
-                    <!--<div class="bold">May-rio Kart</div>-->
-                    <!--<span class="highlight-raspberry">JavaScript / JQuery / CSS / HTML</span>-->
-                <!--</div>-->
-                <!--<div class="button" id="project-name">See Project</div>-->
+            <a href="https://github.com/Mayden-Academy/2018JSGame" target="_blank">
+                <div class="card project-two"></div>
+            </a>
         </div>
-
         <div class="lg-col-3">
-            <div class="card project-three"></div>
-            <!--<div class="text">-->
-            <!--<div class="bold">Project Name</div>-->
-            <!--<span class="highlight-raspberry">Technologies</span>-->
-            <!--</div>-->
-            <!--<div class="button" id="project-name">See Project</div>-->
+            <a href="https://github.com/ailindoyle/pilot-shop" target="_blank">
+                <div class="card project-three"></div>
+            </a>
         </div>
-
         <div class="lg-col-3">
-            <div class="card project-four"></div>
-            <!--<div class="text">-->
-            <!--<div class="bold">Project Name</div>-->
-            <!--<span class="highlight-raspberry">Technologies</span>-->
-            <!--</div>-->
-            <!--<div class="button" id="project-name">See Project</div>-->
+            <a href="https://github.com/ailindoyle/Portfolio" target="_blank">
+                <div class="card project-four"></div>
+            </a>
         </div>
-
         <div class="lg-col-3">
-            <div class="card project-five"></div>
-            <!--<div class="text">-->
-            <!--<div class="bold">Project Name</div>-->
-            <!--<span class="highlight-raspberry">Technologies</span>-->
-            <!--</div>-->
-            <!--<div class="button" id="project-name">See Project</div>-->
+            <a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank">
+                <div class="card project-five"></div>
+            </a>
         </div>
-
         <div class="lg-col-3">
             <div class="card project-six"></div>
-            <!--<div class="text">-->
-            <!--<div class="bold">Project Name</div>-->
-            <!--<span class="highlight-raspberry">Technologies</span>-->
-            <!--</div>-->
-            <!--<div class="button" id="project-name">See Project</div>-->
         </div>
-
     </div>
 </section>
 </body>
