--- a/index.html
+++ b/index.html
@@ -171,5 +171,20 @@
         </div>
     </div>
 </section>
+<!--CONTACT-->
+<section id="contact">
+    <div class="header container">
+        <h2>CONTACT</h2>
+        <p class="highlight-mint">Have a question or want to hire me?</p>
+    </div>
+    <div class="container contact-form">
+        <form>
+            <input class="form-element" placeholder="Name" type="text" name="name" required>
+            <input class="form-element" placeholder="Email" type="text" name="email" required>
+            <textarea class="form-element" placeholder="Your Message" type="text" name="message" required></textarea>
+            <input type="submit" id="submit" class="send-button" value=SUBMIT>
+        </form>
+    </div>
+</section>
 </body>
 </html>
