contact form positioned centrally and send button shifted to next line

--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@
     </div>
 </section>
 <!--CONTACT-->
-<section id="contact">
+<section id="contact" class="section-margins">
     <div class="header container">
         <h2>CONTACT</h2>
         <p class="highlight-mint">Have a question or want to hire me?</p>
     </div>
-    <div class="container contact-form">
+    <div class="contact-form container">
         <form>
             <input class="form-element" placeholder="Name" type="text" name="name" required>
             <input class="form-element" placeholder="Email" type="text" name="email" required>
             <textarea class="form-element" placeholder="Your Message" type="text" name="message" required></textarea>
-            <input type="submit" id="submit" class="send-button" value=SUBMIT>
+            <input type="submit" id="submit" class="send-button" value=SEND>
         </form>
     </div>
 </section>
