footer structure and links created

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="key-interests">
             <div class="key-skill skill-one lg-col-4 sm-col-2">
-                <div class="icon">
+                <div class="about-icon">
                     <i class="fa fa-chart-area"></i>
                 </div>
                 <div>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="key-skill skill-two lg-col-4 sm-col-2">
-                <div class="icon">
+                <div class="about-icon">
                     <i class="fa fa-database"></i>
                 </div>
                 <div>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="key-skill skill-three lg-col-4 sm-col-2">
-                <div class="icon">
+                <div class="about-icon">
                     <i class="fa fa-desktop"></i>
                 </div>
                 <div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="key-skill skill-four lg-col-4 sm-col-2">
-                <div class="icon">
+                <div class="about-icon">
                     <i class="fa fa-users"></i>
                 </div>
                 <div>
@@ -184,6 +184,34 @@
             <textarea class="form-element" placeholder="Your Message" type="text" name="message" required></textarea>
             <input type="submit" id="submit" class="send-button" value=SEND>
         </form>
+    </div>
+</section>
+<!--FOOTER-->
+<section id="footer" class="section-margins">
+    <div class="social-media container">
+        <div class="footer-icon media">
+            <a href="https://www.linkedin.com/in/ailin-doyle-304abbb0/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+        <div class="footer-icon media">
+            <a href="https://twitter.com/ailinrdoyle" target="_blank">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+        <div class="footer-icon media">
+            <a href="https://github.com/ailindoyle" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <div class="footer-icon media">
+            <a href="https://codepen.io/ailindoyle/">
+                <i class="fab fa-codepen"></i>
+            </a>
+        </div>
+    </div>
+    <div class="copyright container">
+        <p>CAITLIN DOYLE &copy2018</p>
     </div>
 </section>
 </body>
