written content of portfolio completed, final styling for readibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Caitlin Doyle | Web Developer</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="handlebars-v4.0.11.js"></script>
@@ -20,9 +20,12 @@
     <div class="canvas"></div>
     <div class="container">
         <div class="home-banner">
-            <span class="highlight-mint">Caitlin Doyle</span>
+            <div class="name highlight-mint">Caitlin Doyle</div>
+            <div class="tagline">
+            Full-stack web developer with an
             <br>
-            Full-stack web developer in training
+            interest in data analytics and visualisation
+            </div>
         </div>
         <div class="drop-button page-link">See my work
             <i class="arrow fa fa-arrow-right"></i>
@@ -48,36 +51,40 @@
     </div>
     <div class="container">
         <div class="key-interests">
-            <div class="key-skill skill-one lg-col-4 sm-col-2">
-                <div class="about-icon">
-                    <i class="fa fa-chart-area"></i>
-                </div>
-                <div>
-                    <p>data analytics</p>
-                </div>
-            </div>
-            <div class="key-skill skill-two lg-col-4 sm-col-2">
-                <div class="about-icon">
-                    <i class="fa fa-database"></i>
-                </div>
-                <div>
-                    <p>databases</p>
-                </div>
-            </div>
             <div class="key-skill skill-three lg-col-4 sm-col-2">
                 <div class="about-icon">
                     <i class="fa fa-desktop"></i>
                 </div>
                 <div>
-                    <p>web design / development</p>
+                    <p class="bold">Web Development</p>
+                    <p class="key-summary">Adept at both front- and back-end technologies</p>
+                </div>
+            </div>
+            <div class="key-skill skill-one lg-col-4 sm-col-2">
+                <div class="about-icon">
+                    <i class="fa fa-database"></i>
+                </div>
+                <div>
+                    <p class="bold">Data Analytics</p>
+                    <p class="key-summary">Skilled at analysing data to discover patterns</p>
+                </div>
+            </div>
+            <div class="key-skill skill-two lg-col-4 sm-col-2">
+                <div class="about-icon">
+                    <i class="fa fa-chart-pie"></i>
+                </div>
+                <div>
+                    <p class="bold">Data Visualisation</p>
+                    <p class="key-summary">Passionate about making data interesting</p>
                 </div>
             </div>
             <div class="key-skill skill-four lg-col-4 sm-col-2">
                 <div class="about-icon">
-                    <i class="fa fa-users"></i>
+                    <i class="fa fa-cogs"></i>
                 </div>
                 <div>
-                    <p>scrum / agile</p>
+                    <p class="bold">Ability to learn</p>
+                    <p class="key-summary">Quick at learning new principles and technologies</p>
                 </div>
             </div>
         </div>
@@ -88,7 +95,8 @@
                 <img src="images/temp_picture.jpg" alt="Me">
             </div>
             <div>
-                <p>SOMETHING ABOUT ME</p>
+                <p class="description">My name is Caitlin and I am a full-stack web developer in training. I am currently a student at Mayden Academy, based in Bath. </p>
+                <p class="description">In addition to my new web development skills I am really interested in data analytics and data visualisation.</p>
             </div>
         </div>
         <div class="skills lg-col-2 sm-col-1">
@@ -103,6 +111,16 @@
                 </div>
             </div>
             <div class="bar">
+                <div class="fill" style="width: 30%">
+                    <div class="tag">Node.js</div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="fill" style="width: 30%">
+                    <div class="tag">React</div>
+                </div>
+            </div>
+            <div class="bar">
                 <div class="fill" style="width: 55%">
                     <div class="tag">PHP</div>
                 </div>
@@ -114,12 +132,17 @@
             </div>
             <div class="bar">
                 <div class="fill" style="width: 30%">
-                    <div class="tag">DBs</div>
+                    <div class="tag">MongoDb</div>
                 </div>
             </div>
             <div class="bar">
                 <div class="fill" style="width: 60%">
                     <div class="tag">Tableau</div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="fill" style="width: 65%">
+                    <div class="tag">R</div>
                 </div>
             </div>
             <div class="bar">
