--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="handlebars-v4.0.11.js"></script>
+    <script src="js/particles.js" defer></script>
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
     </script>
@@ -17,8 +16,8 @@
 <body>
 <!--HOME-->
 <section id="home">
-    <div class="canvas"></div>
-    <div class="container">
+    <canvas id="canvas"></canvas>
+    <div class="home-text container">
         <div class="home-banner">
             <div class="name highlight-mint">Caitlin Doyle</div>
             <div class="tagline">
@@ -31,7 +30,9 @@
             <i class="arrow fa fa-arrow-right"></i>
         </div>
     </div>
+</section>
 <!--NAVBAR-->
+<section id="navbar">
     <nav class="container">
         <ul class="navigation">
             <li class="nav-home">home</li>
