--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="js/particles.js" defer></script>
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
     </script>
     <script defer src="fonts/fontawesome/fontawesome-all.min.js"></script>
     <script defer src="js/index.js"></script>
+    <script defer src="js/particles.js"></script>
+    <script defer src="js/navbar.js"></script>
 </head>
 <body>
 <!--HOME-->
