social media links broken temporarily

--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
 <section id="footer" class="section-margins">
     <div class="social-media container">
         <div class="footer-icon media">
-            <a href="https://www.linkedin.com/in/ailin-doyle-304abbb0/" target="_blank">
+            <a href="#https://www.linkedin.com/in/ailin-doyle-304abbb0/" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="https://twitter.com/ailinrdoyle" target="_blank">
+            <a href="#https://twitter.com/ailinrdoyle" target="_blank">
                 <i class="fab fa-twitter"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="https://github.com/ailindoyle" target="_blank">
+            <a href="#https://github.com/ailindoyle" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="https://codepen.io/ailindoyle/">
+            <a href="#https://codepen.io/ailindoyle/" target="_blank">
                 <i class="fab fa-codepen"></i>
             </a>
         </div>
