--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
     </script>
@@ -12,6 +14,7 @@
     <script defer src="js/index.js"></script>
     <script defer src="js/particles.js"></script>
     <script defer src="js/navbar.js"></script>
+    <script defer src="js/project-tiles.js"></script>
 </head>
 <body>
 <!--HOME-->
@@ -161,38 +164,44 @@
     </div>
     <div class="projects container">
         <div class="lg-col-3">
-            <a href="https://dev.maydenacademy.co.uk/students/2018/caitlin/solar_system/" target="_blank">
-                <div class="card project-one"></div>
-            </a>
-            <!--<div class="project-summary">-->
-                <!--<div class="bold">Solar System</div>-->
-                <!--<div class="highlight-raspberry">HTML / CSS</div>-->
-            <!--</div>-->
-            <!--<div class="project-button" id="solar-system">See Project</div>-->
+            <div class="card">
+                <div class="front">
+                    <div class="project-one"></div>
+                </div>
+                <div class="back">
+                    <div class="bold">Solar System</div>
+                    <div class="highlight-raspberry">HTML / CSS</div>
+                    <a href="https://dev.maydenacademy.co.uk/students/2018/caitlin/solar_system/" target="_blank">
+                        <div class="project-button" id="solar-system">See Project</div>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="lg-col-3">
-            <a href="https://github.com/Mayden-Academy/2018JSGame" target="_blank">
-                <div class="card project-two"></div>
-            </a>
-        </div>
-        <div class="lg-col-3">
-            <a href="https://github.com/ailindoyle/pilot-shop" target="_blank">
-                <div class="card project-three"></div>
-            </a>
-        </div>
-        <div class="lg-col-3">
-            <a href="https://github.com/ailindoyle/Portfolio" target="_blank">
-                <div class="card project-four"></div>
-            </a>
-        </div>
-        <div class="lg-col-3">
-            <a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank">
-                <div class="card project-five"></div>
-            </a>
-        </div>
-        <div class="lg-col-3">
-            <div class="card project-six"></div>
-        </div>
+
+
+        <!--<div class="lg-col-3">-->
+            <!--<a href="https://github.com/Mayden-Academy/2018JSGame" target="_blank">-->
+                <!--<div class="card project-two"></div>-->
+            <!--</a>-->
+        <!--</div>-->
+        <!--<div class="lg-col-3">-->
+            <!--<a href="https://github.com/ailindoyle/pilot-shop" target="_blank">-->
+                <!--<div class="card project-three"></div>-->
+            <!--</a>-->
+        <!--</div>-->
+        <!--<div class="lg-col-3">-->
+            <!--<a href="https://github.com/ailindoyle/Portfolio" target="_blank">-->
+                <!--<div class="card project-four"></div>-->
+            <!--</a>-->
+        <!--</div>-->
+        <!--<div class="lg-col-3">-->
+            <!--<a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank">-->
+                <!--<div class="card project-five"></div>-->
+            <!--</a>-->
+        <!--</div>-->
+        <!--<div class="lg-col-3">-->
+            <!--<div class="card project-six"></div>-->
+        <!--</div>-->
     </div>
 </section>
 <!--CONTACT-->
