--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/homestyles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/navbarstyles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/aboutstyles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/portfoliostyles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/contactstyles.css"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script>
