project tile spin WIP

--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
         <h2>PROJECTS</h2>
     </div>
     <div class="projects container">
-        <div class="lg-col-3">
+        <div class="wrap lg-col-3">
             <div class="card">
                 <div class="front">
                     <div class="project-one"></div>
                 </div>
                 <div class="back">
                     <div class="bold">Solar System</div>
-                    <div class="highlight-raspberry">HTML / CSS</div>
-                    <a href="https://dev.maydenacademy.co.uk/students/2018/caitlin/solar_system/" target="_blank">
-                        <div class="project-button" id="solar-system">See Project</div>
-                    </a>
+                    <div class="bold">HTML / CSS</div>
+                    <!--<a href="https://dev.maydenacademy.co.uk/students/2018/caitlin/solar_system/" target="_blank">-->
+                        <!--<div class="project-button" id="solar-system">See Project</div>-->
+                    <!--</a>-->
                 </div>
             </div>
         </div>
